# pico_ducky

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a.out  bruteforce.c  build.sh  config.c  debug.c  main.c  parser.c  parser.h  rubberducky.c  spi-fatfs-hwconfig.h  spi-fatfs.c  spi-fatfs.h  test.c  tusb_config.h  usb_descriptors.c  ws2812.pio.h
examples/: hold_0_release.txt  test.txt
inc/: spi-fatfs-hwconfig.h  spi-fatfs.h  usb_cdc.h
layouts/: us_keyboard_layout.h
src/: main.c  msc_disk.c  rubberducky.c  spi-fatfs-hwconfig.c  spi-fatfs.c  time_dummy.c  usb_cdc.c  usb_descriptors.c
